// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component H1 Snapshot added optional style inline prop 1`] = `
<h1
  className="jsx-3986905642"
  style={
    Object {
      "lineHeight": 2,
      "marginTop": 30,
    }
  }
>
  Heading 1
</h1>
`;

exports[`Component H1 Snapshot primary color of the theme 1`] = `
<h1
  className="jsx-2605886816"
  style={Object {}}
>
  Heading 1
</h1>
`;

exports[`Component H1 Snapshot secondary font-family of the theme 1`] = `
<h1
  className="jsx-2481974743"
  style={Object {}}
>
  Heading 1
</h1>
`;

exports[`Component H1 Snapshot without arguments, take the default values 1`] = `
<h1
  className="jsx-3986905642"
  style={Object {}}
>
  Heading 1
</h1>
`;
